# pnc-locomanipulation

./: .gitignore  README.md
src/my_geometry/: CMakeLists.txt
src/my_geometry/src/Polytope/: Polytope.cpp
src/my_pnc/: CMakeLists.txt  package.xml
src/my_pnc/include/my_pnc/: ControlArchitecture.hpp  EnvInterface.hpp  InterruptLogic.hpp  TaskAndForceContainer.hpp
src/my_pnc/include/my_pnc/Constraint/: Constraint.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/: MagnetoDefinition.hpp  MagnetoInterface.hpp  MagnetoMotionAPI.hpp
src/my_pnc/include/my_pnc/TrajectoryManager/: BaseOriTrajectoryManager.hpp  CoMTrajectoryManager.hpp  FootPosTrajectoryManager.hpp  JointTrajectoryManager.hpp  MaxNormalForceTrajectoryManager.hpp  QPWeightTrajectoryManager.hpp  SingleWeightTrajectoryManager.hpp  TrajectoryManagerBase.hpp  TrajectoryManagerSet.hpp
src/my_pnc/src/Constraint/: Constraint.cpp
src/my_pnc/src/MagnetoPnC/: MagnetoInterface.cpp  MagnetoMotionAPI.cpp  MagnetoStateEstimator.cpp  MagnetoStateProvider.cpp
src/my_pnc/src/MagnetoPnC/MagnetoCtrl/: MagnetoMainController.cpp  MagnetoResidualController.cpp
src/my_pnc/src/MagnetoPnC/MagnetoCtrlArchitecture/: MagnetoCtrlArchitecture.cpp
src/my_pnc/src/MagnetoPnC/MagnetoLogicInterrupt/: ClimbingInterruptLogic.cpp  WalkingInterruptLogic.cpp
src/my_pnc/src/MagnetoPnC/MagnetoPlanner/: MagnetoGIWCPlanner.cpp  MagnetoGoalPlanner.cpp  MagnetoReachabilityPlanner.cpp  MagnetoTrajectoryManager.cpp
src/my_pnc/src/MagnetoPnC/MagnetoStateMachine/: FullSupport.cpp  Swing.cpp  Transition.cpp
src/my_pnc/src/MagnetoPnC/MagnetoTask/: CoMTask.cpp
src/my_pnc/src/MagnetoPnC/MagnetoTaskAndForceContainer/: MagnetoTaskAndForceContainer.cpp
src/my_pnc/src/TrajectoryManager/: BaseOriTrajectoryManager.cpp  CoMTrajectoryManager.cpp  FootPosTrajectoryManager.cpp  JointTrajectoryManager.cpp  MaxNormalForceTrajectoryManager.cpp  QPWeightTrajectoryManager.cpp  SingleWeightTrajectoryManager.cpp
src/my_robot_core/: CMakeLists.txt
src/my_robot_core/include/my_robot_core/: ControlArchitecture.hpp  control_architecture.hpp  env_interface.hpp  interrupt_logic.hpp  state_estimator.hpp  state_machine.hpp  user_command.hpp
src/my_robot_core/include/my_robot_core/anymal_core/: anymal_command_api.hpp  anymal_definition.hpp  anymal_interface.hpp  anymal_state_estimator.hpp  anymal_state_provider.hpp
src/my_robot_core/include/my_robot_core/magneto_core/: magneto_command_api.hpp  magneto_definition.hpp  magneto_interface.hpp  magneto_motion_api.hpp  magneto_state_estimator.hpp  magneto_state_provider.hpp
src/my_robot_core/include/my_robot_core/reference_generator/: base_ori_trajectory_manager.hpp  com_trajectory_manager.hpp  com_trajectory_manager.old  ee_trajectory_manager.hpp  foot_trajectory_manager.hpp  joint_trajectory_manager.hpp  reference_generator_set.hpp  smooth_transition_manager.hpp  trajectory_manager_base.hpp  transition_manager_base.hpp
src/my_robot_core/src/anymal_core/: anymal_interface.cpp  anymal_state_estimator.cpp  anymal_state_provider.cpp
src/my_robot_core/src/anymal_core/anymal_control_architecture/: locomanipulation_architecture.cpp  manipulation_architecture.cpp  mpc_architecture.cpp  wblc_architecture.cpp
src/my_robot_core/src/anymal_core/anymal_estimator/: slip_observer.cpp
src/my_robot_core/src/anymal_core/anymal_logic_interrupt/: locomanipulation_interrupt_logic.cpp  manipulation_interrupt_logic.cpp  walking_interrupt_logic.cpp
src/my_robot_core/src/anymal_core/anymal_planner/: anymal_com_planner.cpp
src/my_robot_core/src/anymal_core/anymal_wbc_controller/: anymal_wbc.cpp
src/my_robot_core/src/magneto_core/: MagnetoInterface.cpp  MagnetoMotionAPI.cpp  MagnetoStateEstimator.cpp  MagnetoStateProvider.cpp  magneto_interface.cpp  magneto_motion_api.cpp  magneto_state_estimator.cpp  magneto_state_provider.cpp
src/my_robot_core/src/magneto_core/MagnetoTask/: CoMTask.cpp
src/my_robot_core/src/magneto_core/MagnetoTaskAndForceContainer/: MagnetoTaskAndForceContainer.cpp
src/my_robot_core/src/magneto_core/magneto_control_architecture/: MagnetoCtrlArchitecture.cpp  mpc_architecture.cpp  wbmc_architecture.cpp
src/my_robot_core/src/magneto_core/magneto_controller/: MagnetoMainController.cpp  MagnetoResidualController.cpp
src/my_robot_core/src/magneto_core/magneto_estimator/: slip_observer.cpp
src/my_robot_core/src/magneto_core/magneto_logic_interrupt/: ClimbingInterruptLogic.cpp  WalkingInterruptLogic.cpp  climbing_interrupt_logic.cpp  walking_interrupt_logic.cpp
src/my_robot_core/src/magneto_core/magneto_planner/: MagnetoGIWCPlanner.cpp  MagnetoGoalPlanner.cpp  MagnetoTrajectoryManager.cpp  (+5 more)
src/my_robot_core/src/reference_generator/: base_ori_trajectory_manager.cpp  com_trajectory_manager.cpp  com_trajectory_manager.old  ee_trajectory_manager.cpp  foot_trajectory_manager.cpp  joint_trajectory_manager.cpp  smooth_transition_manager.cpp
src/my_robot_system/: CMakeLists.txt  package.xml
src/my_robot_system/include/my_robot_system/: RobotSystem.hpp
src/my_robot_system/src/: RobotSystem.cpp
src/my_simulator/: CMakeLists.txt  package.xml
src/my_simulator/src/Bullet/: main.cpp
src/my_simulator/src/RosSim/: MagnetoRosNode.cpp  Main.cpp  SimulatorFunc.cpp
src/my_utils/: CMakeLists.txt  package.xml
src/my_utils/src/IO/: IOUtilities.cpp
src/my_utils/src/Math/: MathUtilities.cpp  hermite_curve.cpp  hermite_curve_vec.cpp  hermite_quaternion_curve.cpp  hermite_quaternion_curve.old  minjerk_one_dim.cpp
src/my_wbc/: CMakeLists.txt  package.xml
src/my_wbc/include/my_wbc/: QuadProgSolver.hpp  WBC.hpp
src/my_wbc/src/: QuadProgSolver.cpp
src/my_wbc/src/Contact/: BasicContactSpec.cpp  BodyFrameContactSpec.cpp  GroundFrameContactSpec.cpp
src/my_wbc/src/Magnet/: MagnetSpec.cpp
src/my_wbc/src/Task/: BasicTask.cpp
src/my_wbc/src/WBDC/: WBDC.cpp
src/my_wbc/src/WBLC/: KinWBC.cpp  WBLC.cpp
src/my_wbc/src/WBMC/: MCWBC.cpp  MFWBCC.cpp  MRWBCC.cpp  WBMC.cpp  WBRMC.cpp  WBRMRC.cpp
src/my_wbc/src/WBQPD/: WBQPD.cpp  WBQPD_original.cpp  WBQPDcpp.backup
src_devel/my_filter/: CMakeLists.txt  package.xml
(+298 files in other folders)
